--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.google.developer.bugmaster">
+    package="com.google.developer.bugmaster">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
@@ -15,27 +15,27 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".QuizActivity"
             android:exported="false"
-            android:parentActivityName=".features.MainActivity"/>
+            android:parentActivityName=".features.MainActivity" />
         <activity
             android:name=".InsectDetailsActivity"
             android:exported="false"
-            android:parentActivityName=".features.MainActivity"/>
+            android:parentActivityName=".features.MainActivity" />
         <activity
             android:name=".SettingsActivity"
             android:exported="false"
-            android:parentActivityName=".features.MainActivity"/>
+            android:parentActivityName=".features.MainActivity" />
 
         <service
             android:name=".reminders.ReminderService"
-            android:exported="false"/>
+            android:exported="false" />
 
         <receiver
             android:name=".reminders.AlarmReceiver"
@@ -46,6 +46,7 @@
             </intent-filter>
         </receiver>
 
+        <activity android:name=".features.DetailActivity"></activity>
     </application>
 
 </manifest>
