--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".features.main.MainActivity"
+            android:name=".features.main_screen.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -21,21 +21,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".features.quiz.QuizActivity"
+            android:name=".features.quiz_screen.QuizActivity"
             android:exported="false"
-            android:parentActivityName=".features.main.MainActivity">
+            android:parentActivityName=".features.main_screen.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".features.main.MainActivity"/>
+                android:value=".features.main_screen.MainActivity"/>
         </activity>
         <activity
-            android:name=".features.details.InsectDetailsActivity"
+            android:name=".features.details_insect.InsectDetailsActivity"
             android:exported="false"
-            android:parentActivityName=".features.main.MainActivity" />
+            android:parentActivityName=".features.main_screen.MainActivity" />
         <activity
             android:name=".features.settings.SettingsActivity"
             android:exported="false"
-            android:parentActivityName=".features.main.MainActivity" />
+            android:parentActivityName=".features.main_screen.MainActivity" />
 
         <service
             android:name=".reminders.ReminderService"
