--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Sep 08 09:52:34 MSK 2017
-sdk.dir=C\:\\Users\\Pavel\\AppData\\Local\\Android\\Sdk
+#Sun Oct 08 16:56:22 MSK 2017
+ndk.dir=C\:\\Users\\Andrei\\AppData\\Local\\Android\\Sdk\\ndk-bundle
+sdk.dir=C\:\\Users\\Andrei\\AppData\\Local\\Android\\Sdk
