--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ local.properties
 .Trashes
 ehthumbs.db
 Thumbs.db
+.idea/workspace.xml
+.gradle/3.3/taskArtifacts/fileHashes.bin
+.idea/workspace.xml
+.gradle/3.3/taskArtifacts/fileHashes.bin
+.gradle/3.3/taskArtifacts/taskArtifacts.bin
