--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.jakewharton.butterknife'
-apply plugin: 'com.neenbedankt.android-apt'
+//apply plugin: 'me.tatarka.retrolambda'
+//apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+//    buildToolsVersion "26.0.2"
 
     defaultConfig {
         applicationId "com.google.developer.bugmaster"
@@ -39,12 +38,17 @@ dependencies {
 
 
     // Dagger dependencies
-    apt "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-    compile "com.google.dagger:dagger:$rootProject.daggerVersion"
-    compile "com.google.dagger:dagger-android:$rootProject.daggerOldVersion"
-    compile "com.google.dagger:dagger-android-support:$rootProject.daggerOldVersion"
-    apt "com.google.dagger:dagger-android-processor:$rootProject.daggerOldVersion"
+//    apt "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
+//    provided 'org.glassfish:javax.annotation:10.0-b28'
+//    compile "com.google.dagger:dagger:$rootProject.daggerVersion"
+//    compile "com.google.dagger:dagger-android:$rootProject.daggerOldVersion"
+//    compile "com.google.dagger:dagger-android-support:$rootProject.daggerOldVersion"
+//    apt "com.google.dagger:dagger-android-processor:$rootProject.daggerOldVersion"
+
+    compile 'com.google.dagger:dagger-android:2.11'
+    compile 'com.google.dagger:dagger-android-support:2.11' // if you use the support libraries
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
 
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "com.jakewharton:butterknife:$rootProject.butterknifeVersion"
